fixed the alignment issue in cards

--- a/user-side/src/components/HomeScreen.css
+++ b/user-side/src/components/HomeScreen.css
@@ -1,16 +1,15 @@
-.center{
-       
-    margin-top: 5em;
-    margin-left: 40em;
+.center {
+  text-align: center;
+  margin: 5% 40%;
 }
-.fn{
-    font-style: normal;
-    font-weight: bold;
+.fn {
+  font-style: normal;
+  font-weight: bold;
 }
-.grid-container{
-    margin-top: 6em;
-    display: grid;
-    grid-row-gap: 3em;
-    grid-column-gap: 1em;
-    grid-template-columns: auto auto;
+.grid-container {
+  margin: auto 25em;
+  display: grid;
+  grid-row-gap: 3em;
+  grid-column-gap: 1em;
+  grid-template-columns: 20em 25em;
 }
